fix: security path accessor